--- a/Salesforce to SQLServer.csproj
+++ b/Salesforce to SQLServer.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>Salesforce_to_SQLServer</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DeveloperForce.Force" Version="2.1.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
